k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brain-tasks-app
  labels:
    name: brain-tasks-app
